# behavior_sim

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
behavior_sim/: utilities.py
behavior_sim/entities/: entity.py
behavior_sim/geometry/: geom2d.py
tests/: test_movable_2d_entity.py
tests/geometry/: test_geom2d.py
