[metadata]
name = behavior_sim
version = 0.0.1
description = Behavioral simulator
long_description = file: README.md, LICENSE
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy